--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -26,7 +26,54 @@
     <a class="nav-link dropdown-toggle" href="#" id="blendAuditingNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
         Blend Auditing
     </a>
-    <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+        {% comment %} <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="issueSheetNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Issue Sheets
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
+                <li class="dropdown-header">Issue Sheets</li>
+                <li><a class="dropdown-item" id="inlineissue" href="">INLine</a></li>
+                <li><a class="dropdown-item" id="pdlineissue" href="">PD Line</a></li>
+                <li><a class="dropdown-item" id="jblineissue" href="">JB Line</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li class="dropdown-header">Batch Issue Table</li>
+                <li><a class="dropdown-item" href="/core/batch-issue-table/INLINE">INLine</a></li>
+                <li><a class="dropdown-item" href="/core/batch-issue-table/PDLINE">PD Line</a></li>
+                <li><a class="dropdown-item" href="/core/batch-issue-table/JBLINE">JB Line</a></li>
+                <li><a class="dropdown-item" href="/core/batch-issue-table/all">All Lines</a></li>
+            </ul>
+        </li> {% endcomment %}
+        <li>
+            <a class="dropdown-item" href="#">
+                Submenu &raquo;
+            </a>
+            <ul class="dropdown-menu dropdown-submenu">
+                <li>
+                <a class="dropdown-item" href="#">Submenu item 1</a>
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Submenu item 2</a>
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Submenu item 3 &raquo; </a>
+                <ul class="dropdown-menu dropdown-submenu">
+                    <li>
+                    <a class="dropdown-item" href="#">Multi level 1</a>
+                    </li>
+                    <li>
+                    <a class="dropdown-item" href="#">Multi level 2</a>
+                    </li>
+                </ul>
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Submenu item 4</a>
+                </li>
+                <li>
+                <a class="dropdown-item" href="#">Submenu item 5</a>
+                </li>
+            </ul>
+        </li>
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
