Add a bill of materials report to report_center.

--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -30,6 +30,7 @@
                             <option reportval="Where-Used" class="reportOption">Where Used</option>
                             <option reportval="Max-Producible-Quantity" class="reportOption">Max Producible Quantity</option>
                             <option reportval="Purchase-Orders" class="reportOption">Purchase Orders</option>
+                            <option reportval="Bill-Of-Materials" class="reportOption">Bill Of Materials</option>
                         </select>
                     </td>
                 </tr>
