--- a/app/core/templates/core/reports/maxproduciblequantity.html
+++ b/app/core/templates/core/reports/maxproduciblequantity.html
@@ -5,11 +5,10 @@
 
 {% block content %}
     <div>
-        <h1>Maximum Blend Capacity</h1>
-        
+        <h1 class="text-center">Maximum Blend Capacity for</h1>
+        <h1 class="text-center" id="itemCodeAndDescription"></h1>
         <div id="blendCapacityContainer" style="display:none;">
-            <h2>Maximum Blend Capacity:</h2>
-            <div><p id="max_producible_quantity"></p></div>
+            <div><h2 class="text-center" id="max_producible_quantity"></h2></div>
             <h2>Limiting Factor:</h2>
             <div><p id="limiting_factor"></p></div>
             <div><p id="limiting_factor_onhand"></p></div>
