--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -54,16 +54,16 @@
                                     {% endif %}
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/core/create-report/Lot-Numbers/{{ item.encoded_component_item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/Lot-Numbers?itemCode={{ item.encoded_component_item_code }}">
                                         Lot Numbers
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/create-report/Transaction-History/{{ item.encoded_component_item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/Transaction-History?itemCode={{ item.encoded_component_item_code }}">
                                         Transaction History
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/create-report/All-Upcoming-Runs/{{ item.encoded_component_item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/All-Upcoming-Runs?itemCode={{ item.encoded_component_item_code }}">
                                         Upcoming Runs
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/create-report/Count-History/{{ item.encoded_component_item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/Count-History?itemCode={{ item.encoded_component_item_code }}">
                                         Count History
                                     </a></li>
                                 </ul>
