--- a/app/core/templates/core/inventorycounts/upcomingcomponents.html
+++ b/app/core/templates/core/inventorycounts/upcomingcomponents.html
@@ -39,10 +39,10 @@
                                     <i class="fa fa-info-circle"></i>
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                    <li><a class="dropdown-item" href="/core/create-report/Transaction-History/{{ item.item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/Transaction-History?itemCode={{ item.encoded_item_code }}">
                                         Transaction History
                                     </a></li>
-                                    <li><a class="dropdown-item" href="/core/create-report/Count-History/{{ item.item_code }}">
+                                    <li><a class="dropdown-item" href="/core/create-report/Count-History?itemCode={{ item.encoded_item_code }}">
                                         Count History
                                     </a></li>
                                 </ul>
