--- a/app/core/templates/core/adjustmentstatistics.html
+++ b/app/core/templates/core/adjustmentstatistics.html
@@ -53,6 +53,9 @@
                                     <li><a class="dropdown-item" href="/core/create-report/Count-History?itemCode={{ item.encoded_item_code }}">
                                         Count History
                                     </a></li>
+                                    <li><a class="dropdown-item" href="/core/create-report/Max-Producible-Quantity?itemCode={{ item.encoded_item_code }}">
+                                        Max Producible Quantity
+                                    </a></li>
                                 </ul>
                                 {{ item.item_code }}
                             </div>
