--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -77,6 +77,9 @@
                                 <li><a class="dropdown-item" href="/core/create-report/Count-History?itemCode={{ item.encoded_item_code }}">
                                     Count History
                                 </a></li>
+                                <li><a class="dropdown-item" href="/core/create-report/Max-Producible-Quantity?itemCode={{ item.encoded_item_code }}">
+                                    Max Producible Quantity
+                                </a></li>
                             </ul>
                             {{ item.item_code }}
                         </div>
