Rectify css file path.

--- a/app/core/templates/core/loopstatus.html
+++ b/app/core/templates/core/loopstatus.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block scripts %}
-    <link rel="stylesheet" type="text/css" href ="{% static 'core/loopStatus.css' %}">
+    <link rel="stylesheet" type="text/css" href ="{% static 'core/css/loopStatus.css' %}">
 {% endblock %}
 {% block title %}<title>Loop Status</title>{% endblock %}
 
