Add loop status navbar link.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -45,6 +45,9 @@
         <li><a class="dropdown-item" href="/core/batch-issue-table/all">All Lines</a></li>
     </ul>
 </li>
+<li class="nav-item">
+    <a class="nav-link" href="/core/display-loop-status/">Loop Status</a>
+</li>
 <li class="nav-item">    
     <a class="nav-link" href="/admin">Admin</a>
 </li>
