--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,16 +75,19 @@
     <footer>
         <br><br>
     </footer>
-    <script>
-        $(document).ready(function(){
-            if (location.href.includes('localhost')){
-                $("#theNavBar").removeClass('bg-primary');
-                $("#theNavBar").prop('style', 'background-color:#ffa500;');
-            };
-             
-        });
-    </script>
-    {% block belowdeckscripts %}{% endblock %}
+    
+    {% block belowdeckscripts %}
+        <script type="module" src="{% static 'core/js/pageModules/baseTemplate.js' %}"></script>
+        <script>
+            $(document).ready(function(){
+                if (location.href.includes('localhost')){
+                    $("#theNavBar").removeClass('bg-primary');
+                    $("#theNavBar").prop('style', 'background-color:#ffa500;');
+                };
+                 
+            });
+        </script>
+    {% endblock %}
 </html>
 
 
