--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -3,8 +3,8 @@
         Forklift
     </a>
     <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
-        <li class="dropdown-header">Admin</li>
-        <li><a class="nav-link" href="/core/forklift-checklist">Forklift Checklist</a></li>
+        <li class="dropdown-header">Forklift</li>
+        <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown" id="blendAuditingDropdown">
@@ -12,9 +12,9 @@
         Blending
     </a>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="nav-link" href="/core/tank-levels">Tank Levels</a></li>
-        <li><a class="nav-link" href="/core/lot-num-records">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/tank-levels">Tank Levels</a></li>
+        <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
         <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Make A Blend Count Sheet</a></li>
@@ -25,20 +25,6 @@
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
-    </ul>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="" id="issueSheetsLink">Issue Sheets</a>
-</li>
-<li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="issueSheetNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Issue Sheets
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
-        <li class="dropdown-header">Issue Sheets</li>
-        <li><a class="dropdown-item" id="inlineissue" href="">INLine</a></li>
-        <li><a class="dropdown-item" id="pdlineissue" href="">PD Line</a></li>
-        <li><a class="dropdown-item" id="jblineissue" href="">JB Line</a></li>
     </ul>
 </li>
 <li class="nav-item dropdown">
