--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -1,23 +1,22 @@
-<li class="nav-item">
-    <a class="nav-link" href="/core/forklift-checklist">Forklift Checklist</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="/core/tank-levels">Tank Levels</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="/core/lot-num-records">Lot Numbers</a>
-</li>
 <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Blend Auditing
+    <a class="nav-link dropdown-toggle" href="#" id="issueSheetNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Forklift
     </a>
-    <ul class="dropdown-menu" aria-labelledby="blendAuditingNavbarDropdown">
-        <li><a class="dropdown-item" href="/core/component-shortages">ALL Component Shortages</a></li>
+    <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
+        <li class="dropdown-header">Forklift</li>
+        <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
+    </ul>
+</li>
+<li class="nav-item dropdown" id="blendAuditingDropdown">
+    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Blending
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="/core/subcomponent-shortages">Blend Component Shortages</a></li>
+        <li><a class="dropdown-item" href="/core/tank-levels">Tank Levels</a></li>
+        <li><a class="dropdown-item" href="/core/lot-num-records">Lot Numbers</a></li>
         <li><a class="dropdown-item" href="/core/blend-shortages">Blend Shortages</a></li>
         <li><a class="dropdown-item" href="/core/production-blend-runs/?page=1">Production Blend Runs</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-blend-counts">Make A Blend Count Sheet</a></li>
-        <li><a class="dropdown-item" href="/core/upcoming-component-counts">Make A Component Count Sheet</a></li>
         <li><a class="dropdown-item" href="/core/count-records/">View All Counts</a></li>
         <li><a class="dropdown-item" href="/core/blend-statistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/display-all-chemical-locations">View Chemical Locations</a></li>
