--- a/app/templates/navbars/forklift-group-navbar-items.html
+++ b/app/templates/navbars/forklift-group-navbar-items.html
@@ -1,3 +1,9 @@
-<li class="nav-item">
-    <a class="nav-link" href="/core/forklift-checklist">Forklift Checklist</a>
+<li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="issueSheetNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        Forklift
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
+        <li class="dropdown-header">Forklift</li>
+        <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
+    </ul>
 </li>
