Rectify navbar styling issues.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -3,7 +3,6 @@
         Forklift
     </a>
     <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
-        <li class="dropdown-header">Forklift</li>
         <li><a class="dropdown-item" href="/core/forklift-checklist">Forklift Checklist</a></li>
     </ul>
 </li>
@@ -32,9 +31,8 @@
         Admin
     </a>
     <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
-        <li class="dropdown-header">Admin</li>
-        <li><a class="nav-link" href="/admin">Django Admin</a></li>
-        <li><a class="nav-link" href="/core/display-loop-status">Loop Status</a></li>
-        <li><a class="nav-link" href="/core/checklist-management/">Forklift Reports</a></li>
+        <li><a class="dropdown-item" href="/admin">Django Admin</a></li>
+        <li><a class="dropdown-item" href="/core/display-loop-status">Loop Status</a></li>
+        <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
     </ul>
 </li>
