--- a/app/core/templates/core/loopstatus.html
+++ b/app/core/templates/core/loopstatus.html
@@ -21,7 +21,7 @@
             </thead>
             <tbody>
                 {% for item in loop_statuses %}
-                    <tr class="{{ item.function_result }}" id="{{ item.function_name }}Row">
+                    <tr class="{{ item.function_result }}">
                         <td>{{ item.function_name }}</td>
                         <td class="timestampCell">{{ item.time_stamp|date:"m/d/Y H:i:s" }}</td>
                     </tr>
