Add loop status to the office navbar.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -32,7 +32,7 @@
     </a>
     <ul class="dropdown-menu" aria-labelledby="issueSheetNavbarDropdown">
         <li><a class="dropdown-item" href="/admin">Django Admin</a></li>
-        <li><a class="dropdown-item" href="/core/display-loop-status">Loop Status</a></li>
+        <li><a class="dropdown-item" href="/core/display-loop-status">Refresh Status</a></li>
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
     </ul>
 </li>
