--- a/app/templates/navbars/office-navbar-items.html
+++ b/app/templates/navbars/office-navbar-items.html
@@ -16,3 +16,7 @@
         <li><a class="dropdown-item" href="/core/blend-schedule?blend-area=all">Scheduled Blends</a></li>
     </ul>
 </li>
+<li class="nav-item">
+    <a class="nav-link navbar-help" href="/core/display-loop-status" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Check if the background data refresh is running.">Refresh Status</a>
+    <div class="tooltip"></div>
+</li>
