--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -7,6 +7,8 @@
     <div class='text-center'>
         <h1>Full Count History</h1>
         <br><br>
+        <button id="recountsButton" class="btn btn-outline-secondary">Check All Recounts</button>
+        <br><br>
         <button id="createReportButton" class="btn btn-secondary" style="display:none;">Count Report</button>
         <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
             Edit Counts
