--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -6,8 +6,9 @@
 {% block content %}
     <div class='text-center'>
         <h1>Enter Counts Below</h1>
-        <br><br>
         <p><em>Printed {{ todays_date|date:"m/d/y" }}</em></p>
+        <button class="btn btn-outline-secondary noPrint" id="changeDatesButton">Change Dates to Today</button>
+        <div class="noPrint"><br></div>
     </div>
     {% if submitted %}
         <a href='/core/count-records/?page=1'></a>
@@ -52,7 +53,6 @@
             </form>
         </div>
         <div class="text-center buttonContainer noPrint">
-            <button class="btn btn-outline-secondary" id="changeDatesButton">Change Dates to Today</button>
             <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
             <a class="discardButton" href="/core/delete-count-record/count-records/{{ encoded_list }}/{{ encoded_list }}">
                 Delete All
@@ -75,5 +75,4 @@
 
 {% block belowdeckscripts %}
     <script type="module" src="{% static 'core/js/pageModules/countList.js' %}"></script>
-    
 {% endblock %}
