--- a/app/core/static/core/css/base.css
+++ b/app/core/static/core/css/base.css
@@ -97,3 +97,22 @@ a.article-title:hover {
 td { 
   vertical-align: bottom;
 }
+
+@keyframes pulse-animation {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.pulse-element {
+  animation: pulse-animation 1s infinite;
+}
