Add js to check the refresh status.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -37,8 +37,8 @@
         <li><a class="dropdown-item" href="/core/checklist-management/">Forklift Reports</a></li>
     </ul>
 </li>
-<li class="nav-item" id="">
-    <a class="nav-link navbar-help pulse-element" style="display:none;" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
+<li class="nav-item" style="display:none;"  id="refreshWarningLink">
+    <a class="nav-link navbar-help pulse-element" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
         <img src="{% static 'core/media/exclamatino.png' %}" height="50" width="75">
     </a>
     <div class="tooltip"></div>
