Revise the warning icon behavior.

--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -39,7 +39,9 @@
 </li>
 <li class="nav-item" style="display:none;"  id="refreshWarningLink">
     <a class="nav-link navbar-help pulse-element" href="/core/display-loop-status"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Issue with background data refresh.">
-        <img src="{% static 'core/media/exclamatino.png' %}" height="50" width="75">
+        <div class="image-container">
+            <img src="{% static 'core/media/exclamatino.png' %}" height="50" width="75">
+        </div>    
     </a>
     <div class="tooltip"></div>
 </li>
