Create methods and html elements for drag drop desk sched.

--- a/app/core/static/core/css/blendSchedule.css
+++ b/app/core/static/core/css/blendSchedule.css
@@ -27,6 +27,10 @@ td {
     background-color: rgb(255, 237, 138);
 }
 
+.selected {
+    background-color:rgb(182, 182, 182);
+}
+
 @media print {
     .site-header {
         display: none !important;
